uefi-macros/tests/ui/entry.stderr
error: Entry attribute accepts no arguments
  --> $DIR/entry.rs:12:9
   |
12 | #[entry(some_arg)]
   |         ^^^^^^^^

error: Entry method must have no ABI modifier
  --> $DIR/entry.rs:18:1
   |
18 | extern "C" fn bad_abi_modifier(_handle: Handle, _st: SystemTable<Boot>) -> Status {
   | ^^^^^^^^^^

error: Entry method should not be async
  --> $DIR/entry.rs:23:1
   |
23 | async fn bad_async(_handle: Handle, _st: SystemTable<Boot>) -> Status {
   | ^^^^^

error: Entry method should not be generic
  --> $DIR/entry.rs:33:16
   |
33 | fn bad_generic<T>(_handle: Handle, _st: SystemTable<Boot>) -> Status {
   |                ^

error[E0308]: mismatched types
  --> $DIR/entry.rs:38:4
   |
38 | fn bad_args(_handle: Handle, _st: SystemTable<Boot>, _x: usize) -> Status {
   |    ^^^^^^^^ incorrect number of function parameters
   |
   = note: expected fn pointer `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<uefi::table::Boot>) -> uefi::Status`
                 found fn item `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<uefi::table::Boot>, usize) -> uefi::Status {bad_args}`

error[E0308]: mismatched types
  --> $DIR/entry.rs:43:4
   |
43 | fn bad_return_type(_handle: Handle, _st: SystemTable<Boot>) -> bool {
   |    ^^^^^^^^^^^^^^^ expected struct `uefi::Status`, found `bool`
   |
   = note: expected fn pointer `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> uefi::Status`
                 found fn item `extern "efiapi" fn(uefi::Handle, uefi::table::SystemTable<_>) -> bool {bad_return_type}`
